<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateMHActivity"
    android:orientation="vertical"
    android:background="@drawable/images2">
    <androidx.appcompat.widget.Toolbar
        app:title="@string/monhoc"
        android:id="@+id/tlbupdatemh"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#854944"
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:text="@string/monhoc"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/tenmonhoc"
        android:id="@+id/edtSuaTenMH"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/sotinchi"
        android:id="@+id/edtSuaSoTC"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/sotiethoc"
        android:id="@+id/edtSuaSoTH"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:id="@+id/btnSua"
        android:text="@string/sua"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="150dp"/>

</LinearLayout>