<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:background="#BA6363"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="200dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/suasv"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnYesSuaSV"
            android:text="@string/co"
            android:background="#9C27B0"
            android:layout_marginRight="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNoSuaSV"
            android:text="@string/khong"
            android:layout_marginRight="15dp"
            android:background="#9C27B0"/>
    </LinearLayout>




</LinearLayout>