<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:background="@drawable/images"
    >
    <androidx.appcompat.widget.Toolbar
        app:title="@string/qlsv"
        android:id="@+id/tlbMain2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:id="@+id/btnSV"
            android:text="@string/addsinhvien"
            android:textSize="21sp"/>
        <Button
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:id="@+id/btnMH"
            android:text="@string/monhoc"
            android:layout_marginTop="25dp"
            android:textSize="21sp"/>

    </LinearLayout>

</LinearLayout>