<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationMHActivity"
    android:orientation="vertical"
    android:background="@drawable/images2">
    <androidx.appcompat.widget.Toolbar
        app:title="@string/monhoc"
        android:id="@+id/tlbInfo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thongtinmh"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#F00"
        android:textSize="30sp"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tenmonhoc"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txttenmh"
            android:text="android"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sotinchi"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtsotc"
            android:text="3"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sotiethoc"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtsoth"
            android:text="45"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
</LinearLayout>